@@ -31,12 +31,12 @@
     </description>
     <groupId>org.keycloak</groupId>
     <artifactId>keycloak-parent</artifactId>
-    <version>1.9.0.Final-SNAPSHOT</version>
+    <version>2.0.0.CR1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
         <product.name>Keycloak</product.name>
-        <product.name-html>\u003Cstrong\u003EKeycloak\u003C\u002Fstrong\u003E</product.name-html>
+        <product.name-html>\u003Cdiv class="kc-logo-text"\u003E\u003Cspan\u003EKeycloak\u003C\u002Fspan\u003E\u003C\u002Fdiv\u003E</product.name-html>
         <product.version>${project.version}</product.version>
         <product.build-time>${timestamp}</product.build-time>
 
@@ -108,6 +108,9 @@
         <minify.plugin.version>1.7.2</minify.plugin.version>
         <osgi.bundle.plugin.version>2.3.7</osgi.bundle.plugin.version>
         <wildfly.plugin.version>1.0.1.Final</wildfly.plugin.version>
+        
+        <!-- Surefire Settings -->
+        <surefire.memory.settings>-Xms512m -Xmx2048m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=256m</surefire.memory.settings>
     </properties>
 
     <url>http://keycloak.org</url>
@@ -1221,7 +1224,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <forkMode>once</forkMode>
-                        <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
+                        <argLine>${surefire.memory.settings}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
